--- a/game.html
+++ b/game.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Arc Game</title>
+	<link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
 	<script src="js/game.js"></script>
